--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,17 @@
 
     margin-left: calc((100% / 12) * 11);
 }
+
+
+/* FLEX LIBRARY */ 
+
+.flex {
+
+    display: flex;
+}
+
+.wrap {
+    
+    flex-wrap: wrap;
+}
+
