added first two rows

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@
 
 /* handmade framework */ 
 
+
+.row {
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .col {
     flex-grow: 1;
     flex-basis: 0;
