--- a/css/property.css
+++ b/css/property.css
@@ -19,3 +19,43 @@
     margin: 0 auto;
     border: 1px solid white;
 }
+
+p {
+    text-align: center;
+    color: white;
+}
+
+.col-12 {
+
+    padding: 1.5rem;
+    background-color:#006cfa;
+    margin: 0 auto;
+    border: 1px solid white;
+
+
+}
+
+.col-8 {
+
+    padding: 1.5rem;
+    background-color:#006cfa;
+    margin: 0 auto;
+    border: 1px solid white;
+
+
+}
+
+.col-6 {
+
+    padding: 1.5rem;
+    background-color:#006cfa;
+    margin: 0 auto;
+    border: 1px solid white;
+
+
+
+}
+
+.bg-green {
+    background-color: #01e165;
+}
