--- a/css/property.css
+++ b/css/property.css
@@ -1,17 +1,5 @@
-.col-1 {
-    padding: 1.5rem;
-    background-color: #006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
 
-.col-2 {
-    
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
+
 
 .col {
     padding: 1.5rem;
@@ -20,41 +8,21 @@
     border: 1px solid white;
 }
 
+[class*="col-"] {
+
+    padding: 1.5rem;
+    background-color: #006cfa;
+    margin: 0 auto;
+    border: 1px solid white;
+
+}
+
 p {
     text-align: center;
     color: white;
 }
 
-.col-12 {
 
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-
-
-}
-
-.col-8 {
-
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-
-
-}
-
-.col-6 {
-
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-
-
-
-}
 
 .bg-green {
     background-color: #01e165;
@@ -66,56 +34,7 @@ p {
 
 }
 
-.col-3 {
-
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
 
 
-.col-4 {
-
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
-
-.col-5 {
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
-
-.col-7 {
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
-
-.col-11 {
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
 
 
-.col-9 {
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
-
-.col-10 {
-
-    padding: 1.5rem;
-    background-color:#006cfa;
-    margin: 0 auto;
-    border: 1px solid white;
-}
